[gd_scene load_steps=19 format=2]

[ext_resource path="res://scenes/autoloads/SoundManager.gd" type="Script" id=1]
[ext_resource path="res://sounds/sfx/Fire1.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/sfx/Fire2.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/sfx/Hit1.wav" type="AudioStream" id=4]
[ext_resource path="res://sounds/sfx/MonsterDead1.wav" type="AudioStream" id=5]
[ext_resource path="res://sounds/sfx/MonsterDamage1.wav" type="AudioStream" id=6]
[ext_resource path="res://sounds/sfx/MonsterDamage2.wav" type="AudioStream" id=7]
[ext_resource path="res://sounds/sfx/LevelUp.wav" type="AudioStream" id=8]
[ext_resource path="res://sounds/sfx/PlayerDamage1.wav" type="AudioStream" id=9]
[ext_resource path="res://sounds/sfx/PlayerDead1.wav" type="AudioStream" id=10]
[ext_resource path="res://sounds/sfx/Reload1.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/sfx/ConsumeItem1.wav" type="AudioStream" id=12]
[ext_resource path="res://sounds/sfx/BulletCollision1.wav" type="AudioStream" id=13]
[ext_resource path="res://sounds/sfx/BulletCollision2.wav" type="AudioStream" id=14]
[ext_resource path="res://sounds/sfx/BulletCollision3.wav" type="AudioStream" id=15]
[ext_resource path="res://sounds/sfx/BulletCollision4.wav" type="AudioStream" id=16]
[ext_resource path="res://sounds/sfx/BulletCollision5.wav" type="AudioStream" id=17]
[ext_resource path="res://sounds/sfx/BulletCollision6.wav" type="AudioStream" id=18]

[node name="SoundManager" type="Node"]
script = ExtResource( 1 )

[node name="Fire1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Fire2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Hit1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="MonsterDead1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = 2.0

[node name="MonsterDamage1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="MonsterDamage2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="LevelUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="PlayerDamage1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="PlayerDead1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Reload1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="ConsumeItem1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )

[node name="BulletCollision1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="BulletCollision2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )

[node name="BulletCollision3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )

[node name="BulletCollision4" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )

[node name="BulletCollision5" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 17 )

[node name="BulletCollision6" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 18 )
